--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Main.MainActivity">
+        tools:context=".Main.MainActivity"
+>
 
     <FrameLayout
             android:id="@+id/main_container"
