--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -10,4 +10,8 @@
     <item name="league_spin" type="id" />
     <item name="rv_match_list" type="id" />
     <item name="rv_search_list" type="id" />
+    <item name="team_badge" type="id" />
+    <item name="team_name" type="id" />
+    <item name="team_list" type="id" />
+    <item name="sp_team" type="id" />
 </resources>
